# animepahe-dl

./: .SRCINFO  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PKGBUILD  Pipfile  QUICKSTART.md  README.md  SECURITY.md  animepahe-dl.desktop  com.github.ayushjaipuriyar.animepahe-dl.yml  convertor.py  docker-compose.yml  downloader.py  dsd.js  launcher.py  new.py  pyproject.toml  requirements.txt  setup.py  unpacker.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-appimage.yml  build-binary.yml  build-python-package.yml  build-snap.yml  ci.yml  codeql.yml  dependency-review.yml  labeler.yml  pre-release.yml  publish-aur.yml  publish-pypi.yml  release.yml  stale.yml  update-homebrew.yml
Formula/: animepahe-dl.rb
anime_downloader/: __init__.py  __main__.py  api.py  async_downloader.py  cache.py  cli.py  config.py  config_manager.py  downloader.py  gui.py  main.py  models.py  performance.py  utils.py  workers.py
anime_downloader/api/: __init__.py  client.py  downloader.py
anime_downloader/cli/: __init__.py  commands.py  completions.py  interactive.py
anime_downloader/core/: __init__.py  exceptions.py  signal_handler.py
anime_downloader/gui/: __init__.py  main_window.py  workers.py
anime_downloader/gui/dialogs/: __init__.py  settings_dialog.py
anime_downloader/models/: __init__.py  models.py
anime_downloader/services/: __init__.py  cache_service.py  daemon_service.py
anime_downloader/utils/: __init__.py  config_manager.py  console.py  constants.py  version.py
app/: README.md  __init__.py  api.py  cli.py  config_manager.py  downloader.py  gui.py  helper.py  logger.py  main.py  workers.py
benchmarks/: README.md  benchmark_download.py
docs/: API.md  MIGRATION_v6.md  UPGRADE_GUIDE.md  UV_MIGRATION.md
examples/: README.md  async_download.py  background_monitoring_example.py  basic_download.py
scripts/: build-flatpak.sh  install-service.sh
snap/: snapcraft.yaml
systemd/: animepahe-dl.service
tests/: __init__.py  conftest.py  test_cli.py  test_config_manager.py  test_helper.py  test_models.py
