[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "animepahe-dl"
version = "5.5.0"
authors = [
    { name = "Ayush", email = "ayushjaipuriyar21@gmail.com" }
]
description = "A feature-rich anime downloader with CLI and GUI support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["anime", "downloader", "animepahe", "streaming", "video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pyfzf>=0.3.0",
    "pycryptodome>=3.19.0",
    "tqdm>=4.66.0",
    "urllib3>=2.0.0,<2.5.0; python_version < '3.9'",
    "urllib3>=2.6.1; python_version >= '3.9'",
    "PyQt6>=6.6.0",
    "platformdirs>=4.0.0",
    "loguru>=0.7.0",
    "plyer>=2.1.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "python-semantic-release>=10.5.2",
    "twine>=6.1.0,<6.2.0; python_version < '3.9'",
    "twine>=6.2.0; python_version >= '3.9'",
]

[project.urls]
"Homepage" = "https://github.com/ayushjaipuriyar/animepahe-dl"
"Bug Tracker" = "https://github.com/ayushjaipuriyar/animepahe-dl/issues"
"Documentation" = "https://github.com/ayushjaipuriyar/animepahe-dl#readme"
"Source Code" = "https://github.com/ayushjaipuriyar/animepahe-dl"
"Changelog" = "https://github.com/ayushjaipuriyar/animepahe-dl/blob/main/CHANGELOG.md"

[project.scripts]
"animepahe-dl" = "anime_downloader.main:main"

[tool.hatch.version]
path = "anime_downloader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["anime_downloader"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = "true"
upload_to_release = "true"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=anime_downloader --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["anime_downloader"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]